Use margin for left alignment to fix pagination section alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -750,7 +750,7 @@ figure {
   grid-row: 2/3;
   width: 760px;
   padding-top: 70px;
-  padding-left: 70px;
+  margin-left: 70px;
   background-color: #FFFFFF;
 }
 
